--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,7 +1,7 @@
 body {
   font-family: 'Open Sans', sans-serif;
   color: $body;
-  background-color: $bg-secondary;
+  background-color: $bg-body;
 }
 .section-title {
   font-family: 'Open Sans', sans-serif;
