--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -14,3 +14,6 @@
 // @media only screen and (max-width: 767px) {
 //   width: 100%;
 // }
+// @media only screen and (max-width: 575px) {
+//   width: 100%;
+// }
