--- a/src/scss/_resets.scss
+++ b/src/scss/_resets.scss
@@ -1,7 +1,10 @@
+.bg-secondary {
+  background-color: $bg-secondary !important;
+}
+
 .btn {
   font-family: 'Lato', sans-serif;
 }
-
 
 .btn-primary {
   background-color: $primary;
