--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,7 +4,8 @@ $accent: #ad91bc;
 $body: #515151;
 $white: #ffffff;
 
-$bg-secondary: #f5f7fa;
+$bg-secondary: #eef0f2;
+$bg-body: #f5f7fa;
 
 $fw-light: 300;
 $fw-regular: 400;
