--- a/src/scss/modules/_banner-actions.scss
+++ b/src/scss/modules/_banner-actions.scss
@@ -2,11 +2,20 @@
 	display: flex;
 	flex-direction: column;
 	margin-left: auto;
+	@media only screen and (max-width: 575px) {
+		width: 100%;
+	}
 
 	.app-access {
 		display: flex;
+		@media only screen and (max-width: 767px) {
+			padding-bottom: 0.5rem;
+		}
 		.share {
 			margin-left: auto;
+			@media only screen and (max-width: 575px) {
+				margin-left: 0;
+			}
 		}
 		.schedule {
 			margin-left: 1rem;
