--- a/src/scss/modules/_card.scss
+++ b/src/scss/modules/_card.scss
@@ -5,6 +5,9 @@
 		align-items: center;
 		padding: 0.75rem;
 		background-color: transparent;
+		@media only screen and (max-width: 575px) {
+			flex-wrap: wrap;
+		}
 	}
 	.card-title {
 		margin-bottom: 0;
